# kadode_nikki3

./: .env.example  .gitattributes  .gitignore  LICENSE.md  Maintenance.md  Makefile  README.md  compose-prod-like.yml  compose-prod.yml  compose.yml  dev.md  docker-compose.yml  frontend_legacy  gitTag.MD  gitTag.md  kadode_py.txt  php.mecab.ini  python_libraries.txt  test.html  tsconfig.json
.githooks/: pre-commit
.github/: labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ------.md  ----.md  bug_report.md  feature_request.md  others.md  refactor_request.md
.github/workflows/: BrowserTest.yml  BrowserTest.yml_  BrowserTest_by_docker.yml  BrowserTest_by_docker.yml_  CombinedTest.yml  automaticDeploy.yml  automatic_deploy.yml  backend-BrowserTest.yml_  backend-BrowserTest_by_docker.yml_  backend-CombinedTest.yml  backend-browserTest.yml_  backend-combinedTest.yml  backend-lint.yml  backend-php-cs-fixer.yml  backend-phpstan.yml  backend-staticAnalysis.yml  backend-testCombination.yml  backend-testUnit.yml  backend-unitTest.yml  frontend-buildCheck.yml  frontend-lint.yml  frontend-staticAnalysis.yml  frontend-testCombination.yml  frontend-testCombination.yml_  frontend-testIntegration.yml  frontend-testIntegration.yml_  frontend-testUnit.yml  frontend-testUnit.yml_  generateWiki.yml  label.yml  larastanReviewdog.yml  laravelTester.yml  loxcan.yml  nlp-lint.yml  nlp-staticAnalysis.yml  nlp-testCombination.yml  nlp-testUnit.yml  php-cs-fixer.yml  unitTest.yml
backend/: .dockerignore  .env.ci  .env.dusk.local  .env.example  .gitignore  .php-cs-fixer.cache  .php-cs-fixer.dist.php  .phpactor.json  .phpstorm.meta.php  .phpunit.result.cache  =0.23.0  README.md  _ide_helper.php  _ide_helper_models.php  composer.json  kadode_pip_packages.txt  kadode_py.txt  package-lock.json  package.json  phpstan-baseline.neon  phpstan.neon  phpunit.xml  pnpm-lock.yaml  server.php  tailwind.config.js  vite.config.js  webpack.mix.js
backend/commonInfra/: backupGCS.php
backend/config/: app.php  auth.php  backup.php  broadcasting.php  cache.php  cors.php  database.php  debugbar.php  filesystems.php  fortify.php  gcs.php  geoip.php  grpc.php  hashing.php  jetstream.php  logging.php  mail.php  nlp.php  openapi.php  queue.php  sanctum.php  services.php  session.php  view.php
backend/kadode_py/: .gitignore
backend/openapi/: openapi.yml
backend/public/: index.php  mix-manifest.json
backend/python/: connectDB.py  loadEnv.py  nlpForDay.py  nlpForDiary.py  nlpForMonth.py  nlpForMonthAndYear.py  nlpForPre.py  nlpForTotal.py  nlpForTotal20211027.py  nlpForTotal_20211027.py  nlpForYear.py  nlpTEST.py  preparationNlp.py  pythonUseFromPHP.py  test.py  user.dic
backend/routes/: NotificationBroadcasterAdminController.php  api.php  channels.php  web.php
backend/tests/: CreatesApplication.php  DuskTestCase.php  TestCase.php
docs/: 01_development.md  02_installation.md  02_instlation_main.md  03_security.md  04_phpMecab_old.md  05_loginPageLang.md  06_Automatic_deploy.md  07_nlp.md  08.update_libraries.md  09_problems.md  100_nlp_db_chart.drawio  10_makeCustomDic.md  10_makeCustomDic_CustomRule.md  11_cpuLimit.md  12_chartColor.md  13_Backup.md  14_MaintenanceMode.md  404.md  98_aboutLicence.md  99_usedLicense.md  CNAME  README.md  Untitled Diagram.drawio  _config.yml  development.md  instlation.md  sampleTosaNikki.csv
docs/ADR/: README.md
docs/DEV/: README.md
docs/REGACY/: README.md
docs/ROADMAP/: README.md  overall.md  v3.md  v4.md  v5.md
docs/UML/: 001_DBER.drawio  100_nlp_db_chart.drawio
docs/_layouts/: default.html
docs/arc/: 0001-かどで日記のADR導入によりアーキテクチャ選定の失敗を防ぐ.md  0003-かどで日記のフロントエンドとバックエンドの分離.md  0005-日付の保持をUTCに統一し、表示でタイムゾーンを制御する.md  0006-編集履歴機能の搭載.md  0007-マークダウン記法の導入.md  0008-稼働状況表示機能の導入.md  0009-サーバーリソースの一時記録導入.md  0010-フロントエンドのバリデーション.md  0011-サイドメニューの状態保持方法について.md  2-自然言語処理を別APIとして分離.md  3-かどで日記のフロントエンドとバックエンドの分離.md  4-かどで日記のUI刷新fall.md  4-日付の保持をUTCに統一し、表示でタイムゾーンを制御する.md  (+6 more)
docsRoot/: CNAME  package.json
frontend/: .dockerignore  .eslintignore  .eslintrc.json  .gitignore  .npmrc  .prettierignore  .prettierrc  .prettierrc.json  README.md  jest.config.js  package.json  playwright-ct.config.ts  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs  tailwind.config.js  tsconfig.json  vite.config.ts
frontend_discontinued/: .prettierrc.json  jest.config.js  next.config.js  package.json  postcss.config.js  tailwind.config.js
nlp/: .dockerignore  .gitignore  README.md  grpc_client.py  grpc_manager.py  nlpForTotal.py  pyproject.toml  pythonUseFromPHP.py  requirements.txt
nlp/app/: entrypoint.py
nlp/client/: nlp.py
nlp/legacy/: nlpForDiary.py  nlpForMonthAndYear.py  nlpForPre.py  nlpForTotal.py  nlpTEST.py  pythonUseFromPHP.py
nlp/legacy/base/: connectDB.py___  connectDBClass.py  loadEnv.py
nlp/legacy/nlp/: causeEffect_analysis.py  classification_analysis.py  cosSimilarity_analysis.py  dependency_analysis.py  emotions_analysis.py  importantWords_analysis.py  meta_generate.py  special_people_extract.py
nlp/legacy/nlp/EntityRule/: testNER.py
nlp/legacy/nlp/dic/: dic_to_trie.py
nlp/nlp/: meta_generate.py
nlp/proto/: codegen.py  nlp.proto  nlp_pb2.py  nlp_pb2_grpc.py
nlp/servicers/: nlp.py
nlp/src/: entrypoint.py
nlp/tests/combination/: nlp-testIntegration.yml
nlp/tests/integration/: nlp-lint.yml
nlp/tests/unit/: __init__.py
proto/: nlp.proto
sampleData/: sampleToDistinct.csv
script/: backend_log.sh  generate_adr.sh  generate_schema.sh  git_tag.sh
(+907 files in other folders)
